# langchain-claude-code

./: .gitignore  README.md
.github/scripts/: check_diff.py
.github/workflows/: _release.yml
libs/claude-code/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
libs/claude-code/langchain_claude_code/: __init__.py  chat_models.py  tools.py
libs/claude-code/scripts/: check_imports.py
libs/claude-code/tests/integration_tests/: test_compile.py
libs/claude-code/tests/unit_tests/: test_chat_models.py  test_imports.py
